# minimal-rollup

./: .gitignore  .gitmodules  .typos.toml  CONTRIBUTING.MD  Cargo.toml  Makefile  README.md  STYLE_GUIDE.md  STYLE_GUIDE.md.md  blob.txt  foundry.toml  gasreport.ansi  justfile
.github/workflows/: check.yml  gas.yml  test.yml
documentation/: Blob Structure.md  Fee Proposal.md  Overall Design.md  PreemptiveProvableAssertions.md  SignalServiceDesign.md  Taiko Fee Proposal.md  compile_images.sh  compile_provable_assertion_images.sh  design_images.tex  getting-started.md  message-relayer-bridging.md  provable_assertion_images.tex  prover-incentives.md  signal-service.md
gas-reports/: compare_gas_reports.py  gas_comparison_results.json  get_taiko_gas.py  minimal_inbox_publish.json  propose_batch_gas_analysis.json  report.md  taiko_inbox_publish.txt
offchain/: deposit_signal_proof.rs  generic_signal_proof.rs  lib.rs  sample_deposit_proof.rs  sample_deposit_proof.tmpl  sample_proof.tmpl  sample_signal_proof.rs  signal_proof.rs  signal_slot.rs  utils.rs
script/: DeployTaikoInbox.s.sol  deploy-taiko-inbox.sh
scripts/: DeployMinimalL1.s.sol  compare_gas.py  gas.sh  get_taiko_inbox_gas.sh
scripts/test/: generate_signal_proofs.sh  (+1 more)
snapshots/: TaikoInboxTest.json
src/: README.md
test/: BaseProverManager.t.sol  CheckpointTracker.t.sol  CheckpointTracker.t.solx  DataFeed.t.sol  DelayedInclusionStore.t.sol  ERC20ProverManager.t.sol  ERC20ProverManager.t.sol.outdated  ETHProverManager.t.sol  ETHProverManager.t.sol.outdated  ProverManager.t.sol  PublicationFeed.t.sol
(+251 files in other folders)
