[package]
name = "minimal-rollup"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "signal_slot"
path = "offchain/signal_slot.rs"

[[bin]]
name = "signal_proof"
path = "offchain/signal_proof.rs"

[dependencies]
alloy = { version = "0.13.0", features = ["node-bindings"] }
eyre = "0.6.12"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }

