[package]

name = "minimal-rollup"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "signal_slot"
path = "offchain/signal_slot.rs"

[[bin]]
name = "generic_signal_proof"
path = "offchain/generic_signal_proof.rs"

[[bin]]
name = "deposit_signal_proof"
path = "offchain/deposit_signal_proof.rs"

[[bin]]
name = "utils"
path = "offchain/utils.rs"

[[bin]]
name = "sample_signal_proof"
path = "offchain/sample_signal_proof.rs"

[[bin]]
name = "sample_deposit_proof"
path = "offchain/sample_deposit_proof.rs"


[dependencies]
alloy = { version = "0.13.0", features = ["node-bindings"] }
eyre = "0.6.12"
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }

